<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_window_bglight_color"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/default_video_height"
            android:visibility="gone"
            tools:visibility="visible"/>

        <net.derohimat.baseapp.ui.view.BaseImageView
            android:id="@+id/description_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/description_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_top"
        android:layout_margin="@dimen/spacing_normal"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="@dimen/spacing_tiny">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_double"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:text="@string/lorem_ipsum"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/GrayLight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_normal">

        <ImageButton
            android:id="@+id/iv_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="false"
            android:padding="@dimen/spacing_normal"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="8/10"/>

        <ImageButton
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:padding="@dimen/spacing_normal"
            android:src="@drawable/ic_arrow_forward_black_24dp"/>

    </LinearLayout>
</RelativeLayout>