<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container_rellayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <net.derohimat.baseapp.ui.view.BaseRecyclerView
            android:id="@+id/detail_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_half"/>
    </RelativeLayout>
</LinearLayout>